# nw_example

./: CMakeLists.txt  package.xml
config/: make_demo_configs  mico_move_task_config.yaml  mico_simple_client.yaml
config/demos/: d_1.yaml  d_10.yaml  d_11.yaml  d_12.yaml  d_13.yaml  d_14.yaml  d_15.yaml  d_16.yaml  d_17.yaml  d_18.yaml  d_2.yaml  d_3.yaml  d_4.yaml  d_5.yaml  d_6.yaml  d_7.yaml  d_8.yaml  d_9.yaml  run_all_mico_demos
launch/: mico_rviz_only.launch  mico_simple_client.launch  nw_echo_joint_state_publisher.launch  nw_mico_simple_client_demo.launch  nw_mico_simple_client_playground.launch  riemoMicoViz.rviz
scripts/: left_goal  linearization_side  linearization_up  mico_endeff_approach_behavioral_linearization_side  mico_endeff_approach_behavioral_linearization_up  mico_endeff_approach_behavioral_none  mico_endeff_full_behavioral_linearization_side  mico_endeff_full_behavioral_linearization_up  mico_endeff_full_behavioral_none  mico_endeff_none_behavioral_linearization_side  mico_endeff_none_behavioral_linearization_up  mico_endeff_none_behavioral_none  mico_endeff_upright_behavioral_linearization_side  mico_endeff_upright_behavioral_linearization_up  mico_endeff_upright_behavioral_none  nw_mico_requery_trajectory.py  nw_mico_simple_move_client.py  right_goal  run_all  run_all_mico_demos  run_basic_mico_demos  run_comprehensive_mico_demos  run_riemo_move_mico_demo  run_riemo_move_mico_demo.sh  run_riemo_move_mico_playground  set_obstacle_parameters  trajectory_transform.py
src/: nw_mico_simple_move_client_main.cpp  nw_obstacle_publisher_main.cpp
src/nw_mico_client/: nw_echo_joint_state_publisher_main.cpp  nw_mico_simple_move_client_main.cpp  simple_move_robot_client.cpp  simple_move_robot_client.h
